# wpimath

./: CMakeLists.txt
src/main/native/cpp/optimization/: AutodiffWrapper.cpp  EqualityConstraint.cpp  Problem.cpp  Variable.cpp
src/main/native/include/frc/optimization/: AutodiffWrapper.h  ConstraintUtil.h  EqualityConstraint.h  InequalityConstraint.h  Problem.h  Variable.h
src/main/native/include/wpimath/: MathShared.h
src/test/native/cpp/optimization/: main.cpp
